fix: spacing bugs

--- a/src/components/SwatchPaletteWidget/_swatch-palette-widget.scss
+++ b/src/components/SwatchPaletteWidget/_swatch-palette-widget.scss
@@ -90,3 +90,7 @@
     height: 100%;
   }
 }
+
+[class*='--col'].#{$prefix}--swatch-palettes > * + * {
+  --space: 0;
+}
